serpbear/serpbear-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: serpbear
  name: serpbear
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: serpbear
