serpbear/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serpbear-ingress
  annotations:
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: serpbear.rubenhensen.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serpbear
            port:
              number: 3000
  tls:
    - secretName: letsencrypt-prod
      hosts:
        - serpbear.rubenhensen.nl
